tests/fails/nilreturn.t
if not require("fail") then return end
terra foo() : bar
end
